# torch_cnn_template

./: cookiecutter.json
{{cookiecutter.package_name}}/: .dockerignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_once.sh  setup.cfg
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: config.json  logging_config.json  main.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/base/: __init__.py  base_dataloader.py  base_model.py  base_trainer.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/dataloader/: __init__.py  custom_dataset.py  data_transform.py  dataloader.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/model/: loss.py  metric.py  model.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/trainer/: train.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/utils/: logger.py  utils.py
