[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "{{cookiecutter.package_version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
readme = "README.md"
package-mode = "{{cookiecutter.package_mode}}"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
